--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
     "name": "my-react-scss-tsx-app",
     "version": "0.0.1",
     "private": true,
+    "homepage": "https://SchwandersC.github.io/ruffian_website",
     "scripts": {
-        "start": "vite",
-        "build": "vite build"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "nanoid": "^3.3.6",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@types/react": "^19.1.2",
+        "@types/react": "^19.1.3",
         "@types/react-dom": "^19.1.3",
         "@vitejs/plugin-react": "^4.0.0",
-        "sass": "^1.63.6",
-        "typescript": "^5.1.6",
-        "vite": "^4.3.9"
+        "gh-pages": "^6.0.0",
+        "rollup-plugin-node-polyfills": "^0.2.1",
+        "sass": "^1.70.0",
+        "typescript": "^5.0.0",
+        "vite": "^5.0.0"
     }
 }
